# AcfSln

./: .gitignore  ACFSLNDIR.envVariable  CRA_COMPLIANCE.md  README.md  RegisterEnvVariables.js  RegisterEnvVariablesLocal.js  SBOM.md  SECURITY.md  conanfile.py  sbom.json  sbom.spdx.json
Config/: AcfSlnConfig.awc  AcfSlnTestConfig.awc  BaseOnly.awc  BaseOnly.xpc  CopyRules.bat  Core.xpc  Full.xpc  PartituraOnly.awc  PartituraOnly.xpc
Config/CMake/: AcfSlnConfig.cmake  AcfSlnEnv.cmake
Config/QMake/: AcfSln.pri  QtCharts.pri
Config/Qbs/: AcfApplication.qbs  AcfPackage.qbs  AcfStaticLibrary.qbs  ApplicationProduct.qbs  ComponentProduct.qbs  StaticProduct.qbs
Config/VC8/: Acf.rules  QtUIForm.rules  Tortoise.rules
Config/VC9/: Acf.rules  QtUIForm.rules
Config/Windows/: RegisterEnvVariables.js  RegisterEnvVariablesLocal.js
Impl/AbcPck/: AbcPck.cpp  AbcPck.h
Impl/AcfSlnLoc/: AcfSlnLoc.acc  AcfSlnLoc.accl  AcfSlnLoc.qrc  AcfSln_de_DE.ts  AcfSln_en_US.ts  AcfSln_pl_PL.ts  AcfSln_ru_RU.ts  Update_de_DE.bat  Update_en_US.bat  Update_pl_PL.bat  Update_ru_RU.bat
Impl/AcfStarterExe/: CAcfStarter.cpp  CAcfStarter.h  CAcfStarter.ui  main.cpp
Impl/AuthorizationPck/: AuthorizationPck.cpp  AuthorizationPck.h
Impl/BarcodePck/: BarcodePck.cpp  BarcodePck.h
Impl/BlobPck/: BlobPck.cpp  BlobPck.h
Impl/BlobPck/CMake/: CMakeLists.txt
Impl/CalibrationGuiPck/: CalibrationGuiPck.cpp  CalibrationGuiPck.h
Impl/CalibrationGuiPck/CMake/: CMakeLists.txt
Impl/CalibrationPck/: CalibrationPck.cpp  CalibrationPck.h
Impl/CameraPck/: CameraPck.cpp  CameraPck.h
Impl/CameraPck/CMake/: CMakeLists.txt
Impl/CboxPck/: CboxPck.cpp  CboxPck.h
Impl/CommunicationPck/: CommunicationPck.cpp  CommunicationPck.h
Impl/CompositorExe/: Compositor.acc  Compositor.accl  Compositor.alx  Compositor.arx  Compositor.qrc  main.cpp
Impl/CompositorExe/CMake/: CMakeLists.txt
Impl/CompositorPck/: CompositorPck.cpp  CompositorPck.h
Impl/CompositorPck/CMake/: CMakeLists.txt
Impl/DocumentProcessingPck/: DocumentProcessingPck.cpp  DocumentProcessingPck.h
Impl/EdgePck/: EdgePck.cpp  EdgePck.h
Impl/EdgePck/CMake/: CMakeLists.txt
Impl/FfMpegPck/: FfMpegPck.cpp  FfMpegPck.h
Impl/FileProcessingPck/: FileProcessingPck.cpp  FileProcessingPck.h
Impl/FileProcessingPck/CMake/: CMakeLists.txt
Impl/FpfPck/: FpfPck.cpp  FpfPck.h
Impl/HotfolderGuiPck/: HotfolderGuiPck.cpp  HotfolderGuiPck.h
Impl/HotfolderGuiPck/CMake/: CMakeLists.txt
Impl/HotfolderPck/: HotfolderPck.cpp  HotfolderPck.h
Impl/InspectionPck/: InspectionPck.cpp  InspectionPck.h
Impl/IprPck/: IprPck.cpp  IprPck.h  Main.cpp
Impl/IprPck/CMake/: CMakeLists.txt
Impl/MeasPck/: Main.cpp  MeasPck.cpp  MeasPck.h
Impl/ProcessingGuiPck/: ProcessingGuiPck.cpp  ProcessingGuiPck.h
Impl/ProcessingPck/: ProcessingPck.cpp  ProcessingPck.h
Impl/ProductionPck/: ProductionPck.cpp  ProductionPck.h
Impl/PropPck/: PropPck.cpp  PropPck.h
Impl/QMake/: AcfSlnAll.pro  Component.pro  Static.pro  Tool.pro  _Generate_VC9.bat
Impl/QSciPck/: QSciPck.cpp  QSciPck.h
Impl/QaxPck/: QaxPck.cpp  QaxPck.h
Impl/QtAuthorizationPck/: QtAuthorizationPck.cpp  QtAuthorizationPck.h
Impl/QtAuthorizationPck/CMake/: CMakeLists.txt
Impl/QtCameraPck/: QtCameraPck.cpp  QtCameraPck.h
Impl/QtCameraPck/CMake/: CMakeLists.txt
Impl/QtExPck/: QtExPck.cpp  QtExPck.h
Impl/QtExPck/CMake/: CMakeLists.txt
Impl/QtFpfPck/: QtFpfPck.cpp  QtFpfPck.h
Impl/QtInspectionPck/: QtInspectionPck.cpp  QtInspectionPck.h
Impl/QtInspectionPck/CMake/: CMakeLists.txt
Impl/QtIprPck/: QtIprPck.cpp  QtIprPck.h
Impl/QtIprPck/CMake/: CMakeLists.txt
Impl/QtMeasPck/: Main.cpp  QtMeasPck.cpp  QtMeasPck.h
Impl/QtMmPck/: QtMmPck.cpp  QtMmPck.h
Impl/QtMmPck/CMake/: CMakeLists.txt
Impl/QtSignalPck/: QtSignalPck.cpp  QtSignalPck.h
Impl/QtSignalPck/CMake/: CMakeLists.txt
Impl/QwtPck/: QwtPck.cpp  QwtPck.h
Impl/SignalPck/: SignalPck.cpp  SignalPck.h
Impl/VC10/: ConvertAllFromQMake.bat
Impl/VC8/: AcfSlnAll.sln  ConvertProjFromVC9.bat  _LibsReady.vcproj  _PcksReady.vcproj
Impl/VC9/: AcfSlnAll.sln  ConvertProjFromVC8.bat  _LibsReady.vcproj  _PcksReady.vcproj
Impl/WebPck/: WebPck.cpp  WebPck.h
Impl/WizardGuiPck/: WizardGuiPck.cpp  WizardGuiPck.h
Impl/WizardGuiPck/CMake/: CMakeLists.txt
Impl/WizardPck/: WizardPck.cpp  WizardPck.h
Impl/XlnPck/: XlnPck.cpp  XlnPck.h
Impl/XpcEditorExe/: XpcEditor.acc  XpcEditor.accl  XpcEditor.alx  XpcEditor.arx  XpcEditor.qrc  main.cpp
Impl/XpcEditorExe/CMake/: CMakeLists.txt
Impl/ZlibPck/: ZlibPck.cpp  ZlibPck.h
Include/: AcfSln.h
Include/iabc/: CServiceApplicationComp.cpp  CServiceApplicationComp.h  iabc.h
Include/ialgo/: CHoughSpace2d.cpp  CHoughSpace2d.h  CNeighbourBinCaller.cpp  CNeighbourBinCaller.h  (+4 more)
Include/icmpstr/CMake/: CMakeLists.txt
Include/iservice/CMake/: CMakeLists.txt
Install/: Compile_Setup.bat  CopyDlls.bat  CreateScripts.alx  CreateScripts.arx  CreateScripts.bat  Create_Doxyfile.alx  Create_Doxyfile.arx  Create_FromQMake_VC9_OpenSource.alx  Create_FromQMake_VC9_OpenSource.arx  Create_TechnicalDoc.bat  Create_VC8_LGPL.alx  Create_VC8_LGPL.arx  Create_VC9_LGPL.alx  Create_VC9_LGPL.arx  Create_VC9_OpenSource.alx  Create_VC9_OpenSource.arx  Create_VC_LGPL.alx  Create_VC_LGPL.arx  Create_VC_LGPL.bat  Create_VC_OpenSource.alx  Create_VC_OpenSource.arx  Doxyfile  Install.iss  InstallationInfo.txt  Kopie von _Create_VC8_Installation.bat  MakeVCProjects.bat  ReadMe.txt  Rebuild.bat  _Create_FromQMake_VC9_OpenSource.bat  _Create_VC12_Installation.bat  _Create_VC12_OpenSource.bat  _Create_VC12_Public.bat  _Create_VC15_Installation.bat  _Create_VC15_OpenSource.bat  _Create_VC16_OpenSource.bat  _Create_VC17_OpenSource.bat  _Create_VC8_Installation.bat  _Create_VC9_Installation.bat  _Create_VC9_OpenSource.bat
Partitura/: AcfInfoCopyApp.acc  AcfInfoCopyApp.accl  AcfInfoCopyApp.alx  AcfInfoCopyApp.arx  ArxToCarxConverter.acc  ArxToCarxConverter.accl  ArxToCarxConverter.bat  RegistryConverter.acc  RegistryConverter.accl  RegistryConverter.bat
Tests/JsonArchiveIntergrationTest/CMake/: CMakeLists.txt
(+2357 files in other folders)
